--- a/Karim/Ch8/Chapter8.ipynb
+++ b/Karim/Ch8/Chapter8.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,21 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "a  1    0.550644\n",
-       "   2    0.192014\n",
-       "   3    0.366671\n",
-       "b  1    0.182766\n",
-       "   3    0.170704\n",
-       "c  1    0.205399\n",
-       "   2    0.344422\n",
-       "d  2    0.069652\n",
-       "   3    0.761021\n",
+       "a  1    0.438568\n",
+       "   2    0.751370\n",
+       "   3    0.325180\n",
+       "b  1    0.261531\n",
+       "   3    0.896160\n",
+       "c  1    0.931793\n",
+       "   2    0.167802\n",
+       "d  2    0.725088\n",
+       "   3    0.573021\n",
        "dtype: float64"
       ]
      },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "           )"
       ]
      },
-     "execution_count": 3,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,18 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    0.627141\n",
-       "3    0.181274\n",
+       "1    0.261531\n",
+       "3    0.896160\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,20 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b  1    0.627141\n",
-       "   3    0.181274\n",
-       "c  1    0.036821\n",
-       "   2    0.278927\n",
+       "b  1    0.261531\n",
+       "   3    0.896160\n",
+       "c  1    0.931793\n",
+       "   2    0.167802\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,20 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b  1    0.627141\n",
-       "   3    0.181274\n",
-       "d  2    0.232790\n",
-       "   3    0.974609\n",
+       "b  1    0.261531\n",
+       "   3    0.896160\n",
+       "d  2    0.725088\n",
+       "   3    0.573021\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,19 +156,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "a    0.918108\n",
-       "c    0.278927\n",
-       "d    0.232790\n",
+       "a    0.751370\n",
+       "c    0.167802\n",
+       "d    0.725088\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -211,27 +211,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>0.556170</td>\n",
-       "      <td>0.918108</td>\n",
-       "      <td>0.138370</td>\n",
+       "      <td>0.438568</td>\n",
+       "      <td>0.751370</td>\n",
+       "      <td>0.325180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>0.627141</td>\n",
+       "      <td>0.261531</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.181274</td>\n",
+       "      <td>0.896160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>0.036821</td>\n",
-       "      <td>0.278927</td>\n",
+       "      <td>0.931793</td>\n",
+       "      <td>0.167802</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.232790</td>\n",
-       "      <td>0.974609</td>\n",
+       "      <td>0.725088</td>\n",
+       "      <td>0.573021</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -239,13 +239,13 @@
       ],
       "text/plain": [
        "          1         2         3\n",
-       "a  0.556170  0.918108  0.138370\n",
-       "b  0.627141       NaN  0.181274\n",
-       "c  0.036821  0.278927       NaN\n",
-       "d       NaN  0.232790  0.974609"
+       "a  0.438568  0.751370  0.325180\n",
+       "b  0.261531       NaN  0.896160\n",
+       "c  0.931793  0.167802       NaN\n",
+       "d       NaN  0.725088  0.573021"
       ]
      },
-     "execution_count": 8,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,25 +256,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "a  1    0.556170\n",
-       "   2    0.918108\n",
-       "   3    0.138370\n",
-       "b  1    0.627141\n",
-       "   3    0.181274\n",
-       "c  1    0.036821\n",
-       "   2    0.278927\n",
-       "d  2    0.232790\n",
-       "   3    0.974609\n",
+       "a  1    0.438568\n",
+       "   2    0.751370\n",
+       "   3    0.325180\n",
+       "b  1    0.261531\n",
+       "   3    0.896160\n",
+       "c  1    0.931793\n",
+       "   2    0.167802\n",
+       "d  2    0.725088\n",
+       "   3    0.573021\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "  2     9  10       11"
       ]
      },
-     "execution_count": 10,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "     2        9  10       11"
       ]
      },
-     "execution_count": 11,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "           names=['key1', 'key2'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "           names=['state', 'color'])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "     2         9   10"
       ]
      },
-     "execution_count": 15,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "           names=['state', 'color'])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Ohio</th>\n",
+       "      <th>Colorado</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>color</th>\n",
+       "      <th>Green</th>\n",
+       "      <th>Red</th>\n",
+       "      <th>Green</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key1</th>\n",
+       "      <th>key2</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">a</th>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">b</th>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "state      Ohio     Colorado\n",
+       "color     Green Red    Green\n",
+       "key1 key2                   \n",
+       "a    1        0   1        2\n",
+       "     2        3   4        5\n",
+       "b    1        6   7        8\n",
+       "     2        9  10       11"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +845,7 @@
        "2    b        9  10       11"
       ]
      },
-     "execution_count": 17,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,10 +856,212 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Ohio</th>\n",
+       "      <th>Colorado</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>color</th>\n",
+       "      <th>Green</th>\n",
+       "      <th>Red</th>\n",
+       "      <th>Green</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key1</th>\n",
+       "      <th>key2</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">a</th>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">b</th>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "state      Ohio     Colorado\n",
+       "color     Green Red    Green\n",
+       "key1 key2                   \n",
+       "a    1        0   1        2\n",
+       "     2        3   4        5\n",
+       "b    1        6   7        8\n",
+       "     2        9  10       11"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame.sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Ohio</th>\n",
+       "      <th>Colorado</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>color</th>\n",
+       "      <th>Green</th>\n",
+       "      <th>Red</th>\n",
+       "      <th>Green</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key1</th>\n",
+       "      <th>key2</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <th>2</th>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "state      Ohio     Colorado\n",
+       "color     Green Red    Green\n",
+       "key1 key2                   \n",
+       "a    1        0   1        2\n",
+       "b    1        6   7        8\n",
+       "a    2        3   4        5\n",
+       "b    2        9  10       11"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame.sort_index(level=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "frame"
+   ]
   }
  ],
  "metadata": {
